--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@ var _hmt = _hmt || [];
 	 
 <div style="margin-top: 10px"></div>
     <h2>Selected Publications </h2>
-	<!-- 
 	<h3>Preprint</h3>
 
 	<table id="tbPublications" width="100%">
 	<tbody>
 		<tr>
-			<td><strong><a href="" target="_blank">SimpleCall: A Lightweight Image Restoration Agent in Label-Free Environments with MLLM Perceptual Feedback.</a></strong>
+			<td><strong><a href="https://arxiv.org/pdf/2512.18599" target="_blank">SimpleCall: A Lightweight Image Restoration Agent in Label-Free Environments with MLLM Perceptual Feedback.</a></strong>
 				[<a href="https://arxiv.org/pdf/2512.18599">PDF</a>][<a href="">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yuanwei Wu, Ziyi Zhao, Hongcheng Wang, Felix Jimenez, Abrar Majeedi, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>arXiv preprint arXiv:2512.18599, 2025.
@@ -94,7 +93,7 @@ var _hmt = _hmt || [];
 		<tr></tr>	
 
 		<tr>
-			<td><strong><a href="" target="_blank">Trajectory Prediction Meets Large Language Models: A Survey.</a></strong>
+			<td><strong><a href="https://arxiv.org/abs/2506.03408" target="_blank">Trajectory Prediction Meets Large Language Models: A Survey.</a></strong>
 				[<a href="https://arxiv.org/abs/2506.03408">PDF</a>][<a href="https://github.com/colorfulfuture/Awesome-Trajectory-Motion-Prediction-Papers">Code</a>]<br>
 			<p >Yi Xu, Ruining Yang, Yitian Zhang, <strong>Jianglin Lu</strong>, Mingyuan Zhang, Yizhou Wang, Lili Su, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>arXiv preprint arXiv:2506.03408, 2025.
@@ -102,12 +101,12 @@ var _hmt = _hmt || [];
 			
 	</tbody>
 	</table>
-	-->
+
 	<h3>Conference</h3>
 	<table id="tbPublications" width="100%">
 	<tbody>
 		<tr>
-			<td><strong><a href="" target="_blank">Ref-Adv: Exploring MLLM Visual Reasoning in Referring Expression Tasks.</a></strong>
+			<td><strong><a href="https://openreview.net/forum?id=iEBgrepR9i" target="_blank">Ref-Adv: Exploring MLLM Visual Reasoning in Referring Expression Tasks.</a></strong>
 				[<a href="https://openreview.net/forum?id=iEBgrepR9i">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
 			<p >Qihua Dong, Yang Kuo, Ju Lin, Handong Zhao, Yitian Zhang, Yizhou Wang, Huimin Zeng, <strong>Jianglin Lu</strong>, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
@@ -118,7 +117,7 @@ var _hmt = _hmt || [];
 		<tr></tr>
 		
 		<tr>
-			<td><strong><a href="" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
+			<td><strong><a href="https://openreview.net/forum?id=yOEmEXmbV8" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
 				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="https://github.com/Jianglin954/QCQC">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Simon Jenni, Kushal Kafle, Jing Shi, Handong Zhao, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
@@ -134,7 +133,7 @@ var _hmt = _hmt || [];
 				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">The Indra Representation Hypothesis for Multimodal Alignment.</a></strong>
+			<td><strong><a href="https://openreview.net/forum?id=D2NR5Zq6PG" target="_blank">The Indra Representation Hypothesis for Multimodal Alignment.</a></strong>
 				[<a href="https://openreview.net/forum?id=D2NR5Zq6PG">PDF</a>][<a href="https://github.com/Jianglin954/Indra">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Kuo Yang, Yitian Zhang, Simon Jenni, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-ninth Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025.
@@ -150,7 +149,7 @@ var _hmt = _hmt || [];
 				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">Outlier-Aware Post-Training Quantization for Image Super-Resolution.</a></strong>
+			<td><strong><a href="https://openaccess.thecvf.com/content/ICCV2025/papers/Wang_Outlier-Aware_Post-Training_Quantization_for_Image_Super-Resolution_ICCV_2025_paper.pdf" target="_blank">Outlier-Aware Post-Training Quantization for Image Super-Resolution.</a></strong>
 				[<a href="https://openaccess.thecvf.com/content/ICCV2025/papers/Wang_Outlier-Aware_Post-Training_Quantization_for_Image_Super-Resolution_ICCV_2025_paper.pdf">PDF</a>][<a href="">Code</a>]<br>
 			<p >Hailing Wang, <strong>Jianglin Lu</strong>, Yitian Zhang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>International Conference on Computer Vision (<strong>ICCV <font color="#FF0000">Highlight</font></strong>), 2025.
@@ -166,7 +165,7 @@ var _hmt = _hmt || [];
 				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">Representation Potentials of Foundation Models for Multimodal Alignment: A Survey.</a></strong>
+			<td><strong><a href="https://aclanthology.org/2025.emnlp-main.843.pdf" target="_blank">Representation Potentials of Foundation Models for Multimodal Alignment: A Survey.</a></strong>
 				[<a href="https://aclanthology.org/2025.emnlp-main.843.pdf">PDF</a>][<a href="https://github.com/Jianglin954/Representation-Alignment-Survey">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Hailing Wang, Yi Xu, Yizhou Wang, Kuo Yang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP</strong>), 2025.
@@ -183,7 +182,7 @@ var _hmt = _hmt || [];
 				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">Unequal Scientific Recognition in the Age of LLMs.</a></strong>
+			<td><strong><a href="https://aclanthology.org/2025.findings-emnlp.1279.pdf" target="_blank">Unequal Scientific Recognition in the Age of LLMs.</a></strong>
 				[<a href="https://aclanthology.org/2025.findings-emnlp.1279.pdf">PDF</a>]<br>
 			<p >Yixuan Liu, Abel Elekes, <strong>Jianglin Lu</strong>, Rodrigo Dorantes-Gilardi, Albert-Laszlo Barabasi. </p>
 			   <p style="margin-top: -11px"><i>The 2025 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP Findings</strong>), 2025.
@@ -200,7 +199,7 @@ var _hmt = _hmt || [];
 				<img src="img/ICLR.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">Scale-Free Graph-Language Models.</a></strong>
+			<td><strong><a href="https://openreview.net/pdf?id=nFcgay1Yo9" target="_blank">Scale-Free Graph-Language Models.</a></strong>
 				[<a href="https://openreview.net/pdf?id=nFcgay1Yo9">PDF</a>][<a href="https://github.com/Jianglin954/SFGL">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yixuan Liu, Yitian Zhang, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2025.
@@ -216,7 +215,7 @@ var _hmt = _hmt || [];
 				<img src="img/NIPS23.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 			</td>
 			-->
-			<td><strong><a href="" target="_blank">Latent Graph Inference with Limited Supervision.</a></strong>
+			<td><strong><a href="https://arxiv.org/pdf/2310.04314.pdf" target="_blank">Latent Graph Inference with Limited Supervision.</a></strong>
 				[<a href="https://arxiv.org/pdf/2310.04314.pdf">PDF</a>][<a href="https://jianglin954.github.io/LGI-LS/">Project Page</a>][<a href="https://github.com/Jianglin954/LGI-LS">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Yi Xu, Huan Wang, Yue Bai, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Thirty-seventh Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2023.
@@ -449,6 +448,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
