--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ var _hmt = _hmt || [];
 			<td width="670">
 				<div id="toptitle">					
 					<h1>Jianglin (Johnny) Lu &nbsp 盧江林 </h1></div>
-				<h3 style="font-weight:normal"><a href="https://scholar.google.com/citations?user=H8_Rl5UAAAAJ&hl=en&oi=ao">Google Scholar </a> &nbsp <a href="https://www.linkedin.com/in/jianglin-johnny-lu-29b329243/">LinkedIn</a> &nbsp <a href="https://github.com/Jianglin954">Github</a>  </h3>
+				<h3 style="font-weight:normal"><a href="https://scholar.google.com/citations?user=H8_Rl5UAAAAJ&hl=en&oi=ao">Google Scholar </a> &nbsp <a href="https://www.linkedin.com/in/jianglin-johnny-lu-29b329243/">LinkedIn</a> &nbsp <a href="https://github.com/Jianglin954">Github</a>  &nbsp <a href="https://jianglin954.github.io/img/wechat.jpg">WeChat</a>  </h3>
 				<p>
 					SMILE Lab, <br>
 					Department of ECE, <br>
@@ -448,6 +448,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
