--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ var _hmt = _hmt || [];
 		<tr></tr>
 		
 		<tr>
-			<td><strong><a href="https://openreview.net/forum?id=yOEmEXmbV8" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
-				[<a href="https://openreview.net/forum?id=yOEmEXmbV8">PDF</a>][<a href="https://github.com/Jianglin954/QCQC">Code</a>]<br>
+			<td><strong><a href="https://arxiv.org/pdf/2602.21175" target="_blank">Seeing Through Words: Controlling Visual Retrieval Quality with Language Models.</a></strong>
+				[<a href="https://arxiv.org/pdf/2602.21175">PDF</a>][<a href="https://github.com/Jianglin954/QCQC">Code</a>]<br>
 			<p ><strong>Jianglin Lu</strong>, Simon Jenni, Kushal Kafle, Jing Shi, Handong Zhao, Yun Fu. </p>
 			   <p style="margin-top: -11px"><i>The Fourteenth International Conference on Learning Representations (<strong>ICLR</strong>), 2026.
 		</tr>
@@ -448,6 +448,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
