--- a/index.html
+++ b/index.html
@@ -81,16 +81,6 @@ var _hmt = _hmt || [];
 
 	<table id="tbPublications" width="100%">
 	<tbody>
-		<tr>
-			<td><strong><a href="https://arxiv.org/pdf/2512.18599" target="_blank">SimpleCall: A Lightweight Image Restoration Agent in Label-Free Environments with MLLM Perceptual Feedback.</a></strong>
-				[<a href="https://arxiv.org/pdf/2512.18599">PDF</a>][<a href="">Code</a>]<br>
-			<p ><strong>Jianglin Lu</strong>, Yuanwei Wu, Ziyi Zhao, Hongcheng Wang, Felix Jimenez, Abrar Majeedi, Yun Fu. </p>
-			   <p style="margin-top: -11px"><i>arXiv preprint arXiv:2512.18599, 2025.
-		</tr>
-		<tr></tr>
-		<tr></tr>	
-		<tr></tr>	
-		<tr></tr>	
 
 		<tr>
 			<td><strong><a href="https://arxiv.org/abs/2506.03408" target="_blank">Trajectory Prediction Meets Large Language Models: A Survey.</a></strong>
@@ -105,6 +95,17 @@ var _hmt = _hmt || [];
 	<h3>Conference</h3>
 	<table id="tbPublications" width="100%">
 	<tbody>
+		<tr>
+			<td><strong><a href="" target="_blank">Restore-R1: A Lightweight Image Restoration Agent via Reinforcement Learning with Multimodal LLM Feedback.</a></strong>
+				[<a href="">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
+			<p ><strong>Jianglin Lu</strong>, Yuanwei Wu, Ziyi Zhao, Hongcheng Wang, Felix Jimenez, Abrar Majeedi, Yun Fu. </p>
+			   <p style="margin-top: -11px"><i>The IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>) Findings, 2026.
+		</tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+		
 		<tr>
 			<td><strong><a href="https://openreview.net/forum?id=iEBgrepR9i" target="_blank">Ref-Adv: Exploring MLLM Visual Reasoning in Referring Expression Tasks.</a></strong>
 				[<a href="https://openreview.net/forum?id=iEBgrepR9i">PDF</a>][<a href="">Code</a>] <span style="color:#888;">(coming soon)</span><br>
@@ -448,6 +449,7 @@ var _hmt = _hmt || [];
 		
 
 </body></html>
+
 
 
 
